Layout Bug Fixes

--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 body {
     font-size: 16px;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 ::selection {
@@ -14,7 +14,7 @@ body {
 }
 
 .header {
-    height: 50px;
+    height: 60px;
     width: 100%;
     position: fixed;
     top: 0;
@@ -31,21 +31,22 @@ body {
 }
 
 .logo {
-    max-height: 50px;
+    max-height: 60px;
 }
 
 nav {
-    line-height: 50px;
+    line-height: 60px;
 }
 
 .nav-links {
     padding: 0 10px;
-    height: 50px;
+    height: 60px;
     display: inline-block;
 }
 
 .nav-links-active {
     background: #eee;
+    color: #525252;
 }
 
 .aboutus-container {
@@ -109,6 +110,8 @@ nav {
     background: rgba(0, 150, 136, 0.8);
     padding: 2% 0;
     min-height: 400px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .form {
@@ -143,7 +146,7 @@ nav {
 }
 
 .hamburger {
-    line-height: 50px;
+    line-height: 60px;
 }
 
 .carousel-image {
