--- a/common.css
+++ b/common.css
@@ -123,3 +123,11 @@ h6 {
 .font-8c8c8c {
     color: #8c8c8c;
 }
+
+.justify {
+    text-align: justify;
+}
+
+.font-888 {
+    color: #888;
+}
