--- a/media-queries.css
+++ b/media-queries.css
@@ -45,6 +45,7 @@
     .footer {
         padding: 15px;
         line-height: 16px;
+        text-align: center;
     }
 
     .input-text, button {
